Finished Main Activity. Works well.

--- a/ProfileAssignment/app/src/main/res/layout/activity_main.xml
+++ b/ProfileAssignment/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,20 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="test.profileassignment.MainActivity">
 
-    <TextView
+    <Button
+        android:text="Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/mainActivityButton" />
+
+    <TextView
+        android:text="Select the profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/mainActivityButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="47dp"
+        android:id="@+id/mainActivityTextView" />
 </RelativeLayout>
