--- a/ProfileAssignment/app/src/main/res/menu/profile_action_buttons.xml
+++ b/ProfileAssignment/app/src/main/res/menu/profile_action_buttons.xml
@@ -2,6 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_setting"
-        android:title="Edit preferences"
+        android:title="Edit Profile"
         />
 </menu>
