--- a/ProfileAssignment/app/src/main/res/layout/activity_profile.xml
+++ b/ProfileAssignment/app/src/main/res/layout/activity_profile.xml
@@ -45,6 +45,7 @@
         android:layout_marginTop="57dp"
         android:id="@+id/studentID"
         android:maxLength="6"
+        android:digits="0123456789"
         android:hint="Student ID" />
 
     <EditText
